--- a/public/periodic.html
+++ b/public/periodic.html
@@ -354,7 +354,7 @@
         <source src="http://content.bitsontherun.com/videos/bkaovAYt-27m5HpIu.webm" type="video/webm">
     </video>
     <video id="v4" autobuffer="true" data-setup="{}">
-        <source src="https://ccccc.me/index.php?explorer/fileProxy&accessToken=fe88jJ-CmcHY1Bt1ZE-G7hakqEOp0DNHfOBztVQU-X1z4wSPb0vyXnc7nxriYLooys2tnMDylw&path=%7BgroupPath%7D%3A1%2F%E5%8A%A8%E6%BC%AB%2F%E5%9C%B0%E4%B8%8B%E5%9F%8E%E9%82%82%E9%80%85%E5%A4%96%E4%BC%A0(%E5%89%91%E5%A7%AC%E7%A5%9E%E5%9C%A3%E8%B0%AD)%2F%E7%AC%AC1%E9%9B%86%20%E5%89%91%E5%A7%AC%E4%B8%8E%E5%A6%96%E7%B2%BE.mp4" type="video/mp4">
+        <source src="https://ccccc.me/index.php?explorer/fileProxy&accessToken=9246Gug2d7B5b0A-JrfJyNk9j9Cs3iM7_xhRPvGs90l7hGMVIsnw_dhoNu839a4akv5d58icFw&path=%7BgroupPath%7D%3A1%2F%E5%8A%A8%E6%BC%AB%2F%E6%81%B6%E9%AD%94%E4%BA%BA%2F%E6%81%B6%E9%AD%94%E4%BA%BA10.mp4" type="video/mp4">
     </video>
 </div>
 </body>
